# ee109

./: check_csv.py
Final-Project/: .gitignore  Final_Report.md  Milestone_1_Submission  Milestone_1_Submission.md  Project_Proposal.md  README.md  compare_logcompress_raw.py  generate_mel_filterbank.py  pyproject.toml  requirements.txt  run_pipeline_hw.py  test_log10.py
Final-Project/Cleanup/: run.sh  run_vcs.sh
Final-Project/data/: homophones.csv
Final-Project/data/transcripts/: harvard_m.txt
Final-Project/docs/: architecture.md
Final-Project/fpga/: build.sbt  run.sh  run_vcs.sh
Final-Project/fpga_io/: debug_final_fpga_output_for_assert.csv  debug_final_gold_WORKAROUND_output_for_assert.csv  debug_final_gold_output_for_assert.csv  debug_logcompress_input_fpga.csv  debug_logcompress_output_fpga_raw.csv  debug_logcompress_output_gold_raw.csv  fpga_output.csv  fpga_windowed_input_debug.csv  gold_mel_power_first_frame.csv  hann_window.csv  imag.csv  imag.npy  input_quantized.npy  input_stft_window.csv  logcompress_output.csv  logcompress_output_raw_fpga.csv  logcompress_output_raw_python.csv  mel_filterbank.csv  mel_filterbank.npy  mel_filterbank_debug.csv  melfilterbank_output.csv  power_bins.csv  power_bins_debug.csv  power_spectrum_first_frame.csv  power_spectrum_output.csv  real.csv  real.npy  stft_imag_output.csv  stft_real_output.csv  whisperscale_input.csv  whisperscale_output.csv
Final-Project/src/: dsp.py
Final-Project/submissions/: Final_Report.md  Milestone_1_Submission.md
Final-Project/tests/: test_asr.py  test_short_sentences.py
lab1/: run.sh  (+2 more)
(+226 files in other folders)
