[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiolib"
version = "0.1.0"
description = "FPGA-Accelerated Audio → ASR → NLP pipeline"
authors = [
    {name = "William Briger"},
    {name = "Chris Gutierrez"},
    {name = "Mohamad Ismail"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy~=1.26",
    "scipy~=1.12",
    "soundfile~=0.12",
    "torch~=2.2",
    "torchaudio~=2.2", 
    "transformers~=4.40",
    "sentencepiece~=0.1"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools]
package-dir = {"" = "src"}
